--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   <!-- Video-based Intro -->
   <div id="intro-screen">
     <video id="intro-video" autoplay muted>
-      <source src="your-video-url.mp4" type="video/mp4"> <!-- Replace with your 9-second video URL -->
+      <source src="Intro_20250217_202318_0002.mp4" type="video/mp4"> <!-- Replace with your 9-second video URL -->
     </video>
   </div>
 
