--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,27 +13,20 @@
     .header { width: 100%; height: 40px; background: linear-gradient(to right, #000428, #004e92); display: flex; justify-content: space-between; align-items: center; position: fixed; top: 0; left: 0; right: 0; padding: 0 10px; z-index: 1000; }
     .header img { width: 110px; }
     .search-icon { font-size: 18px; cursor: pointer; color: white; }
-
     /* Full-screen Intro */
-    #intro-screen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
-
-    #intro-video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
+#intro-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9999;
+}  
     /* Main Poster */
     .poster-container {
       width: 100%;
@@ -56,6 +50,14 @@
       font-weight: bold;
       text-shadow: 2px 2px 5px black;
     }
+.poster {
+  width: 100%;
+  display: block;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7); /* Dark shadow for depth */
+  border-radius: 10px; /* Optional */
+box-shadow: 0 -5px 10px
+rgba(0, 163, 255, 0.7), 0 5px 10px rgba(0, 163, 255, 0.7);
+}
     .watch-now {
       position: absolute;
       bottom: 20px;
@@ -84,9 +86,9 @@
     }
     .draggable-poster {
       flex: 0 0 auto;
-      width: 180px;
+      width: 180px; /* Slightly smaller poster size */
       aspect-ratio: 16 / 9;
-      border: 2px solid #004e92;
+      border: 2px solid #004e92; /* Dark blue premium outline */
       box-shadow: 0 0 10px #004e92;
       border-radius: 10px;
       position: relative;
@@ -112,19 +114,19 @@
     }
 
    /* Upcoming Badge */
-    .draggable-poster::after {
-      content: "Upcoming";
-      position: absolute;
-      top: 5px;
-      left: 5px;
-      background: gold;
-      color: black;
-      font-size: 10px;
-      font-weight: bold;
-      padding: 3px 6px;
-      border-radius: 5px;
-      box-shadow: 0 0 5px yellow;
-    }
+  .draggable-poster::after {
+  content: "Upcoming";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background: gold;
+  color: black;
+  font-size: 10px;
+  font-weight: bold;
+  padding: 3px 6px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px yellow;
+}
     
     /* Live Section */
     .live-section { display: none; width: 100%; margin-top: 40px; }
@@ -179,13 +181,13 @@
     <img src="https://i.ibb.co/Jw85KmL7/Picsart-25-02-14-09-42-18-444.jpg" alt="Logo" />
     <i class="fas fa-search search-icon"></i>
   </div>
-
-  <!-- Video-based Intro -->
-  <div id="intro-screen">
+<!-- Video-based Intro (9 seconds) -->
+<div id="intro-screen">
     <video id="intro-video" autoplay muted>
-      <source src="Intro_20250217_202318_0002.mp4" type="video/mp4"> <!-- Replace with your 9-second video URL -->
+        <source src="Intro_20250217_202318_0002.mp4" type="video/mp4"> <!-- Replace with your 9-second video URL -->
+        Your browser does not support the video tag.
     </video>
-  </div>
+</div>
 
   <!-- Home Page Main Poster -->
   <div class="poster-container" id="homePoster">
@@ -199,21 +201,241 @@
 
   <!-- Draggable Horizontal Posters (Hotstar-like Carousel) -->
   <div class="draggable-posters-container" id="draggablePosters">
-    <!-- Similar posters as before -->
+    <div class="draggable-poster">
+      <img src="https://i.ibb.co/7ts0FnVD/Picsart-25-02-16-11-58-26-819.jpg" alt="Poster 1" />
+      <div class="poster-details">
+        <div class="teams">India vs Bangladesh</div>
+        <div>20 February | 12:30 PM</div>
+      </div>
+    </div>
+    <div class="draggable-poster">
+      <img src="https://i.ibb.co/8tp7tfT/Picsart-25-02-16-22-39-45-581.jpg" alt="Poster 2" />
+      <div class="poster-details">
+        <div class="teams">Afghanistan vs South Africa</div>
+        <div>21 February | 12:30 PM</div>
+      </div>
+    </div>
+    <div class="draggable-poster">
+      <img src="https://i.ibb.co/s92yvFYG/images-2-29.jpg" alt="Poster 3" />
+      <div class="poster-details">
+        <div class="teams">Australia vs England</div>
+        <div>22 February | 12:30 PM</div>
+      </div>
+    </div>
+    <div class="draggable-poster">
+      <img src="https://i.ibb.co/s92yvFYG/images-2-29.jpg" alt="Poster 4" />
+      <div class="poster-details">
+        <div class="teams">Pakistan vs India</div>
+        <div>23 February | 12:30PM</div>
+      </div>
+    </div>
+    <div class="draggable-poster">
+      <img src="https://i.ibb.co/s92yvFYG/images-2-29.jpg" alt="Poster 5" />
+      <div class="poster-details">
+        <div class="teams">Bangladesh vs Newzealand</div>
+        <div>24 February | 12:30PM</div>
+      </div>
+    </div>
+  </div>
+<!-- Live Scoreboard Section -->
+<div class="scoreboard-container" id="scoreboard-container">
+    <div id="no-match">We Upadating scoreboard soon.</div>
+</div>
+
+<style>
+    .scoreboard-container {
+        display: flex;
+        overflow-x: auto;
+        gap: 10px;
+        padding: 10px;
+        scroll-behavior: smooth;
+        scroll-snap-type: x mandatory;
+        white-space: nowrap;
+    }
+
+    .score-box {
+        flex: 0 0 auto;
+        width: 200px; /* Keeps the width same */
+        min-height: 90px; /* Reduced height */
+        background: #222 !important;
+        padding: 8px; /* Reduced padding */
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(255, 215, 0, 0.8);
+        border: 2px solid gold;
+        text-align: left;
+        scroll-snap-align: start;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .score-box .match-info {
+        font-size: 10px; /* Smaller font */
+        font-weight: bold;
+        color: gold;
+        text-align: center;
+        margin-bottom: 4px;
+        white-space: normal;
+    }
+
+    .score-box .teams {
+        font-size: 10px; /* Smaller font */
+        font-weight: bold;
+        background: #333 !important;
+        padding: 4px; /* Reduced padding */
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 2px;
+    }
+
+    .score-box .team {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        white-space: nowrap;
+    }
+
+    .score-box .status {
+        font-size: 9px; /* Smaller font */
+        font-weight: bold;
+        color: #00ffea;
+        text-align: left;
+        margin-top: 3px;
+        white-space: normal;
+        word-wrap: break-word;
+    }
+</style>
+
+<script>
+    const apiKey = "4daf5be0-5702-4964-bac2-04c8e5851f9b";
+    const apiUrl = `https://api.cricapi.com/v1/currentMatches?apikey=${apiKey}`;
+
+    async function fetchLiveScores() {
+        try {
+            let response = await fetch(apiUrl);
+            let data = await response.json();
+            let container = document.getElementById("scoreboard-container");
+            container.innerHTML = "";
+
+            if (data.status === "success" && data.data.length > 0) {
+                let liveMatches = data.data.filter(match => match.status !== "Match Ended" && match.status !== "Completed");
+
+                if (liveMatches.length > 0) {
+                    liveMatches.forEach(match => {
+                        let team1 = match.teams[0];
+                        let team2 = match.teams[1];
+
+                        let team1Details = match.score.find(t => t.inning.includes(team1)) || { r: 0, w: 0, o: 0 };
+                        let team2Details = match.score.find(t => t.inning.includes(team2)) || { r: 0, w: 0, o: 0 };
+
+                        let matchBox = document.createElement("div");
+                        matchBox.classList.add("score-box");
+                        matchBox.innerHTML = `
+                            <div class="match-info">${match.name}</div>
+                            <div class="teams">
+                                <div class="team"><span>${team1}</span> <span>${team1Details.r}/${team1Details.w} (${team1Details.o} ov)</span></div>
+                                <div class="team"><span>${team2}</span> <span>${team2Details.r}/${team2Details.w} (${team2Details.o} ov)</span></div>
+                            </div>
+                            <p class="status">${match.status}</p>
+                        `;
+                        container.appendChild(matchBox);
+                    });
+                } else {
+                    container.innerHTML = `<div id="no-match">No live matches available.</div>`;
+                }
+            } else {
+                container.innerHTML = `<div id="no-match">We Update Scoreboard Soon</div>`;
+            }
+        } catch (error) {
+            console.error("Error:", error);
+            document.getElementById("scoreboard-container").innerHTML = `<div id="no-match">Error fetching data!</div>`;
+        }
+    }
+
+    fetchLiveScores();
+    setInterval(fetchLiveScores, 30000);
+</script>
+  <!-- Live Section -->
+  <div class="live-section" id="liveSection">
+    <div class="dplayer-container" id="dplayer"></div>
+
+    <div class="live-menu">
+      <div class="menu-item active" onclick="switchTab('channels')">Channels</div>
+      <div class="menu-item" onclick="switchTab('live-chat')">Live Chat</div>
+    </div>
+
+    <div id="channels" class="content active">
+      <div class="channel-list" id="channelList"></div>
+    </div>
+
+    <div id="live-chat" class="content">
+      <h2>Live Chat</h2>
+      <p>Chat with other viewers in real time.</p>
+    </div>
   </div>
 
-  <!-- Live Scoreboard Section -->
-  <div class="scoreboard-container" id="scoreboard-container">
-    <div id="no-match">We Upadating scoreboard soon.</div>
+  <div class="bottom-nav">
+    <div class="nav-item active" onclick="showHome()"><i class="fas fa-home"></i> Home</div>
+    <div class="nav-item" onclick="showLiveTV()"><i class="fas fa-tv"></i> Live</div>
+    <div class="nav-item" onclick="showHighlights()"><i class="fas fa-film"></i> Highlights</div>
   </div>
 
   <script>
-    // Hide intro and show main content after video ends
-    document.getElementById('intro-video').addEventListener('ended', function() {
-      document.getElementById("intro-screen").style.display = "none";
+    const dp = new DPlayer({
+      container: document.getElementById('dplayer'),
+      video: { url: '', type: 'auto' }
     });
 
-    // Other scripts as before...
+    async function loadChannels() {
+      const response = await fetch('https://raw.githubusercontent.com/allroundertv/Jkk/refs/heads/main/data.json');
+      const data = await response.json();
+      const channelList = document.getElementById('channelList');
+      channelList.innerHTML = '';
+
+      data.channels.forEach(channel => {
+        const channelItem = document.createElement('div');
+        channelItem.className = 'channel-item';
+        channelItem.innerHTML = `<img src="${channel.logo}" alt="${channel.name}"><p>${channel.name}</p>`;
+        channelItem.onclick = () => { dp.switchVideo({ url: channel.url, type: 'auto' }); dp.play(); };
+        channelList.appendChild(channelItem);
+      });
+    }
+    document.addEventListener('DOMContentLoaded', loadChannels);
+
+    function showHome() {
+    document.getElementById('liveSection').style.display = 'none';
+    document.getElementById('homePoster').style.display = 'block';
+    document.getElementById('draggablePosters').style.display = 'flex';
+    document.getElementById('scoreboard-container').style.display = 'flex'; // Ensure scorecard is always shown
+}
+
+function showLiveTV() {
+    document.getElementById('liveSection').style.display = 'block';
+    document.getElementById('homePoster').style.display = 'none';
+    document.getElementById('draggablePosters').style.display = 'none';
+    document.getElementById('scoreboard-container').style.display = 'none'; // Hide scorecard
+}
+
+function showHighlights() {
+    alert("No highlights available yet.");
+    document.getElementById('scoreboard-container').style.display = 'none'; // Hide scorecard
+}
+// Hide intro and show main content after animation
+document.addEventListener("DOMContentLoaded", function() {
+    setTimeout(() => {
+        document.getElementById("intro-screen").style.display = "none"; // Hide intro
+    }, 9000); // 4.5 seconds for full animation
+});
+
+    function switchTab(tab) {
+      document.querySelectorAll('.menu-item').forEach(item => item.classList.remove('active'));
+      document.querySelectorAll('.content').forEach(content => content.classList.remove('active'));
+      document.querySelector(`.menu-item[onclick="switchTab('${tab}')"]`).classList.add('active');
+      document.getElementById(tab).classList.add('active');
+    }
   </script>
+
 </body>
 </html>
