--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@ rgba(0, 163, 255, 0.7), 0 5px 10px rgba(0, 163, 255, 0.7);
 <!-- Video-based Intro (9 seconds) -->
 <div id="intro-screen">
     <video id="intro-video" autoplay muted>
-        <source src="Intro_20250217_202318_0002.mp4" type="video/mp4"> <!-- Replace with your 9-second video URL -->
+        <source src="https://drive.google.com/uc?export=download&id=1WEGs3lem5NVZw9pgYV0ZMN-5Cv3Ih9Es
+.mp4" type="video/mp4"> <!-- Replace with your 9-second video URL -->
         Your browser does not support the video tag.
     </video>
 </div>
