--- a/index.html
+++ b/index.html
@@ -14,19 +14,12 @@
     .header img { width: 110px; }
     .search-icon { font-size: 18px; cursor: pointer; color: white; }
     /* Full-screen Intro */
-#intro-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
+#intro-screen video {
     width: 100%;
     height: 100%;
-    background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 9999;
-}  
+    object-fit: cover; /* Ensures the video covers the screen without excessive zoom */
+}
+
     /* Main Poster */
     .poster-container {
       width: 100%;
