--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 #intro-screen video {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the video covers the screen without excessive zoom */
+    object-fit: contain; /* Ensures the video covers the screen without excessive zoom */
 }
 
     /* Main Poster */
