--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     .search-icon { font-size: 18px; cursor: pointer; color: white; }
     /* Full-screen Intro */
 #intro-screen video {
+        position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the video covers the screen without excessive zoom */
+    background: black;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 999;
+}  
 }
 
     /* Main Poster */
