--- a/index.html
+++ b/index.html
@@ -438,6 +438,10 @@ document.addEventListener("DOMContentLoaded", function() {
       document.getElementById(tab).classList.add('active');
     }
   </script>
-
+<script>
+  if (confirm("Join Our Telegram Channel?")) { 
+      window.location.href = "https://t.me/+3aJFsq2EJLg4NzI1"; 
+  }
+</script>
 </body>
 </html>
